--- a/src/App.css
+++ b/src/App.css
@@ -134,12 +134,17 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 html {
   font-size: 62.5%; }
 
+* {
+  margin: 0;
+  padding: 0; }
+
 .App {
   text-align: center; }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 150px; }
+  height: 150px;
+  margin-bottom: 30px; }
 
 .App-header {
   background-color: #222;
@@ -147,7 +152,7 @@ html {
   color: white; }
 
 .App-title {
-  font-size: 1.5em; }
+  font-size: 3rem; }
 
 .App-intro {
   font-size: large; }
