--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,11 @@
 @import './stylePartials/setup';
 @import './stylePartials/utils';
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -8,6 +13,7 @@
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 150px;
+  margin-bottom: 30px;
 }
 
 .App-header {
@@ -18,7 +24,7 @@
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 3rem;
 }
 
 .App-intro {
