displaying searched actor headshot, name and list of know_for movies

--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,12 @@ h2 {
   margin: 0;
   padding: 0; }
 
+img {
+  max-width: 100%; }
+
+.headShot {
+  width: 15%; }
+
 .App {
   text-align: center; }
 
