--- a/src/App.scss
+++ b/src/App.scss
@@ -14,8 +14,15 @@ img {
   max-width: 100%;
 }
 
-.headShot {
+.headShot,
+.moviePoster {
   width: 15%;
+}
+
+.movieLi {
+  background: lightgray;
+  padding: 20px;
+  margin-top: 30px;
 }
 
 .App {
