--- a/src/App.scss
+++ b/src/App.scss
@@ -10,8 +10,24 @@
   padding: 0;
 }
 
+body {
+  background: $bglight;
+  font-family: 'Roboto', sans-serif;
+}
+
 img {
   max-width: 100%;
+}
+
+h1,
+h2 {
+  color: #C03221;
+  font-family: 'Fredoka One', cursive;
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 5rem;
 }
 
 .headShot,
@@ -20,33 +36,15 @@ img {
 }
 
 .movieLi {
-  background: lightgray;
+  background: $bglight;
   padding: 20px;
   margin-top: 30px;
-}
-
-.App {
-  text-align: center;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 150px;
   margin-bottom: 30px;
-}
-
-.App-header {
-  background-color: #222;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 3rem;
-}
-
-.App-intro {
-  font-size: large;
 }
 
 @keyframes App-logo-spin {
