--- a/src/stylePartials/_utils.scss
+++ b/src/stylePartials/_utils.scss
@@ -1,5 +1,5 @@
 // Project 5 Utils Partial
 
-$highlight: #C03221;
+$highlight: rgb(131, 32, 35);
 $bgdark   : rgb(152, 152, 152);
 $bglight  : rgb(228, 228, 228);
