--- a/src/App.css
+++ b/src/App.css
@@ -134,45 +134,127 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 html {
   font-size: 62.5%; }
 
-h2 {
-  background: #989898; }
-
 * {
   margin: 0;
   padding: 0; }
 
+label {
+  display: none; }
+
+.wrapper {
+  width: 90%;
+  max-width: 1440px;
+  margin: 0 auto; }
+
 body {
-  background: #e4e4e4;
-  font-family: 'Roboto', sans-serif; }
+  font-family: 'Roboto', sans-serif;
+  font-size: 2rem;
+  background: #000;
+  color: white; }
 
 img {
   max-width: 100%; }
 
 h1,
 h2 {
-  color: #C03221;
+  color: #cf3a3f;
   font-family: 'Fredoka One', cursive;
   font-weight: 400; }
 
 h1 {
-  font-size: 5rem; }
+  font-size: 7rem; }
+
+ul {
+  list-style: none; }
+
+header {
+  background: url("./assets/theatreSeats_web.jpg") center center;
+  background-size: cover;
+  height: 80vh;
+  display: grid;
+  grid-template-rows: 1fr 4fr;
+  grid-template-columns: 1fr; }
+
+.title {
+  grid-column: 1 / -1;
+  text-align: center; }
+
+h3 {
+  font-size: 2rem; }
+
+.searchSelect {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  align-items: start; }
+
+.actor1,
+.actor2 {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap; }
+  .actor1 h2,
+  .actor2 h2 {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 10px; }
+  .actor1 input,
+  .actor2 input {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px; }
+  .actor1 button,
+  .actor2 button {
+    width: 100%;
+    margin-bottom: 10px; }
+
+.actor1 {
+  grid-column: 1 / span 1; }
+
+.actor2 {
+  grid-column: 3 / span 1; }
+
+button {
+  background: #FFD23F;
+  border: none;
+  padding: 0 20px;
+  border-radius: 10px;
+  height: 50px; }
+
+.showMatches {
+  border-radius: 50%;
+  height: 25vh;
+  width: 25vh;
+  padding: 0;
+  background: #4ECDC4;
+  font-family: 'Fredoka One', cursive;
+  font-size: 3rem;
+  margin-top: 20px; }
+
+input {
+  height: 50px; }
 
 .headShot,
 .moviePoster {
-  width: 15%; }
+  width: 50%; }
+
+.displayMovies {
+  color: black; }
+
+.displayMoviesHeaders {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); }
+  .displayMoviesHeaders h3 {
+    color: black;
+    text-align: center;
+    background: #e4e4e4;
+    font-size: 3rem;
+    padding: 10px 0; }
 
 .movieLi {
   background: #e4e4e4;
   padding: 20px;
-  margin-top: 30px; }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 150px;
-  margin-bottom: 30px; }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); }
