--- a/src/stylePartials/_utils.scss
+++ b/src/stylePartials/_utils.scss
@@ -2,4 +2,4 @@
 
 $highlight: rgb(131, 32, 35);
 $bgdark   : rgb(152, 152, 152);
-$bglight  : rgb(228, 228, 228);
+$bglight  : rgba(255, 255, 255, 0.8);
